--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,6 +17,12 @@ body {
     align-items: center;
 }
 
+.header2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 svg:hover {
     cursor: pointer;
 }
@@ -68,4 +74,9 @@ input:focus {
     position: fixed;
     bottom: 0;
     left: 0;
+}
+
+#light {
+    margin-bottom: 20px;
+    align-self: flex-end;
 }
