--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 50px;
 }
 
 .header2 {
@@ -139,8 +140,10 @@ input:focus {
 }
 
 #light {
-    margin-bottom: 20px;
     align-self: flex-end;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .story-image-section {
@@ -215,3 +218,4 @@ input:focus {
 .play-audio-btn:hover {
     background: rgba(255, 255, 255, 0.3);
 }
+
