--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Ruge+Boogie&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 
 body {
-    background-color: rgb(185, 36, 182);
-    color: wheat;
+  min-height: 100vh;
+  background: linear-gradient(
+    135deg,
+    rgb(185, 36, 182),
+    rgb(120, 20, 140),
+    rgb(60, 10, 90)
+  );
+  color: wheat;
 }
-
 .dark {
-  background-color:  #121212;
+  background: linear-gradient(
+    135deg,
+    rgb(31, 5, 46),
+    rgb(30, 5, 35),
+    rgb(28, 5, 41)
+  );
   color: rgb(187, 0, 124);
 }
 
@@ -106,11 +117,13 @@ p h1,
     opacity: 0.85;
 }
 
-#title {
+.title {
     color: white;
     font-family: 'Ruge Boogie', cursive;
     font-size: 4rem;
 }
+
+
 
 .input-container { 
     display: flex;
@@ -219,3 +232,7 @@ input:focus {
     background: rgba(255, 255, 255, 0.3);
 }
 
+#subtitle {
+    color: white;
+    font-family: 'MedievalSharp', cursive
+}
